# SeleniumBase

./: .dockerignore  .gitignore  .travis.yml  234  6543234  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Docker_README.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  _config.yml  ajit.html  azure-pipelines.yml  conftest.py  demo.html  docker_readme.txt  docker_requirements.txt  install.bat  install.sh  local_reqs_setup.py  local_requirements.pip  local_setup.py  mkdocs.yml  pip_setup.py  pyproject.toml  pytest.ini  requirements.pip  requirements.txt  server_requirements.txt  server_setup.py  setup.cfg  setup.py  test.html  virtualenv_install.bat  (+3 more)
.github/: FUNDING.yml  Workflows.md
console_scripts/: ReadMe.md  run.py  sb_install.py  sb_mkdir.py
docker/: ReadMe.md  docker-entrypoint.sh  docker_config.cfg  docker_requirements.txt  docker_setup.py  docker_test.sh  run_docker_test_in_chrome.sh  run_docker_test_in_firefox.sh
docs/: README.md  ReadMe.txt  index.html  instructions.txt  prepare.py  requirements.txt  sitemap.xml
drivers/: ReadMe.md
examples/: ReadMe.md  ReadMe.txt  ajit.py  basic_masterqa_test.py  basic_script.py  basic_test.py  case_summary.md  coffee_cart_tests.py  context_scripts.py  custom_settings.py  decryption_test.py  delayed_assert_test.py  edge_test.py  example_config.cfg  fail_if_old_driver_test.py  fullscreen_validation.py  get_ip_with_bing.py  github_test.py  gui_test_runner.py  hack_the_planet.py  handle_alert_test.py  iframe_tests.py  image_test.py  ip_cow_test.py  jaeger_ui_test.py  list_assert_test.py  locale_code_test.py  locale_test.py  masterqa_test.py  multiple_cdp_drivers.py  my_first_test.py  my_test_suite.py  non_terminating_checks_test.py  nth_child_test.py  old_wordle_script.py  parameterized_test.py  performance_test.py  proxy_bing_test.py  proxy_test.py  pure_python.py  (+147 more)
grid/: ReadMe.txt  selenium_server_config_example.cfg  start-selenium-node.bat
grid_files/: Grid_Hub_Server_README.md  ReadMe.txt  start-selenium-node.bat  start-selenium-server.sh
help_docs/: ReadMe.md  before_installation.md  behave_gui.md  case_plans.md  cdp_mode_methods.md  chart_maker.md  chinese.md  command_line.md  commander.md  customizing_test_runs.md  demo_mode.md  desired_capabilities.md  features_list.md  handling_iframes.md  happy_customers.md  how_it_works.md  (+23 more)
(+651 files in other folders)
